tests/baselines/reference/invalidTryStatements2.errors.txt
==== tests/cases/compiler/invalidTryStatements2.ts (5 errors) ====
    function fn() {
        try {
        } catch { // syntax error, missing '(x)'
                ~
!!! invalidTryStatements2.ts(3,13): error TS1005: '(' expected.
        }
    
        catch(x) { } // error missing try
        ~~~~~
!!! invalidTryStatements2.ts(6,5): error TS1008: Unexpected token; 'statement' expected.
                 ~
!!! invalidTryStatements2.ts(6,14): error TS1005: ';' expected.
              ~
!!! invalidTryStatements2.ts(6,11): error TS2095: Could not find symbol 'x'.
    
        finally{ } // error missing try
        ~~~~~~~
!!! invalidTryStatements2.ts(8,5): error TS1008: Unexpected token; 'statement' expected.
    }